tests/baselines/reference/asyncArrowFunctionCapturesArguments_es2017.errors.txt
asyncArrowFunctionCapturesArguments_es2017.ts(4,52): error TS2345: Argument of type 'IArguments' is not assignable to parameter of type '[]'.


==== asyncArrowFunctionCapturesArguments_es2017.ts (1 errors) ====
    class C {
       method() {
          function other() {}
          var fn = async () => await other.apply(this, arguments);      
                                                       ~~~~~~~~~
!!! error TS2345: Argument of type 'IArguments' is not assignable to parameter of type '[]'.
       }
    }
    